# simple-ocr

./: README.md  pyproject.toml
src/ijf/: cli.py  config.py  imagemagick.py  tesseract.py
